examples/test/testpolicy6837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6837
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key23: value24
      key16: value17
      key27: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value2
          key24: value18
      podSelector:
        matchLabels:
          key49: value38
          key14: value26
          key15: value3
